# silver-pos

./: .env  Cargo.toml  Dockerfile  Secrets.toml  Shuttle.toml  compose.yaml
backup-migrations/2023-11-02-132701_categories/: down.sql
backup-migrations/2023-11-27-124001_transections-nodirection/: down.sql  up.sql
backup-migrations/2023-11-27-124853_add_count_to_transections/: down.sql  up.sql
backup-migrations/2023-12-02-115454_add_code_name_to_category/: down.sql  up.sql
backup-migrations/2023-12-02-115757_reorder_category_columns/: up.sql
backup-migrations/2023-12-02-121729_add_m_name_to_categories/: up.sql
backup-migrations/2023-12-04-151506_vouchers_table/: down.sql  up.sql
backup-migrations/2023-12-04-160256_non_null_cart_items/: down.sql  up.sql
backup-migrations/2023-12-04-161920_non_null_in_vouchers/: up.sql
backup-migrations/2023-12-04-162322_reset_non_nulls/: up.sql
migrations/: 20231205162240_voucher_split_struct.sql  20231208021014_schema.sql  20231209130554_accounting.sql  20231209133240_to_time.sql  20231209133708_add_description_to_cashflow.sql  20231210154351_total_and_paid_for_voucher.sql  20231220042556_authentication.sql
migrations/2023-10-20-151953_transections/: down.sql  up.sql
migrations/2023-10-20-152135_categories/: up.sql
migrations/2023-10-20-152201_subcategories/: down.sql  up.sql
migrations/2023-10-20-152223_items/: up.sql
migrations/2023-10-30-053019_items/: up.sql
migrations/2023-11-02-132629_transections/: up.sql
migrations/2023-11-02-132701_categories/: up.sql
migrations/2023-12-02-121729_add_m_name_to_categories/: down.sql
migrations/2023-12-02-122006_reorder_category_m_name/: up.sql
migrations/2023-12-02-131731_add_two_columns_reorder_items/: down.sql  up.sql
resources/: main.db  parch-and-posey.sql
src/: authorization.rs  lib.rs  main.rs  models.rs  ops.rs  routes.rs  schema.rs
