[package]
name = "silver-pos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = "0.4.31"
diesel = { version = "2.1.3", features = ["postgres", "uuid", "chrono"] }
dotenvy = "0.15.7"
http = "0.2.9"
serde = { version = "1.0.188", features = ["derive"] }
time = "0.3.30"
tokio = { version = "1.32.0", features = ["full"]}
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["cors"]}
