[package]
name = "silver-pos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["ws"]}
chrono = { version = "0.4.31", features = ["serde"]}
dotenvy = "0.15.7"
futures-util = "0.3.29"
http = "0.2.9"
serde = { version = "1.0.188", features = ["derive"] }
sqlx = {version = "0.7.3", features = ["runtime-tokio", "postgres", "migrate", "uuid", "json", "chrono", "tls-native-tls", "macros"]}
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["cors"]}
shuttle-axum = "0.35.1"
shuttle-runtime = "0.35.1"
shuttle-secrets = "0.35.1"
shuttle-shared-db = { version = "0.35.0", features = ["postgres"] }
