[package]
name = "silver-pos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["ws", "multipart", "macros"] }
axum-extra = { version = "0.9.0", features = ["cookie-private"] }
chrono = { version = "0.4.31", features = ["serde", "clock"] }
dotenvy = "0.15.7"
futures-util = "0.3.29"
http = "0.2.9"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.108"
sqlx = {version = "0.7.3", features = ["runtime-tokio", "postgres", "migrate", "uuid", "json", "chrono", "tls-native-tls", "macros"]}
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["cors", "fs"]}
shuttle-axum = "0.35.2"
shuttle-runtime = "0.35.2"
shuttle-secrets = "0.35.2"
shuttle-shared-db = { version = "0.35.0", features = ["postgres", "sqlx"] }
jsonwebtoken = "9.2.0"
argon2 = "0.5.2"
rand_core = { version = "0.6.4", features = ["std"]}
oauth2 = "4.4.2"
anyhow = "1.0.75"
tracing = "0.1.40"
reqwest = { version = "0.11.23", features = ["json"]}
rust-s3 = "0.33.0"
shuttle-static-folder = "0.28.0"
tower-sessions = "0.8.0"
time = "0.3.31"
jsonwebtokens = "1.2.0"
uuid = { version =  "1.6.1", features = ["serde"] }
async-session = "3.0.0"
